# oct_tree

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.py  build_requirments.txt  conanfile.py  configure.py  helper.py  test.py
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/addition/: CMakeLists.txt
src/fixed_point/: CMakeLists.txt
src/fixed_point/inc/: FixedPoint32.h  FixedPoint64.h  FixedPointTypeDefs.h  Octree.h
src/fixed_point/src/: FixedPoint32.cpp  FixedPoint64.cpp  Octree.cpp
tests/: CMakeLists.txt
tests/tests_addition/: CMakeLists.txt  tests_addition.cpp
tests/tests_fixed_point/: CMakeLists.txt  tests_fixed_point.cpp
